Write egit project index page
This is only a short snippet, but its better than the nearly empty
page we have there right now.

--- a/project-info/project-page-paragraph.html
+++ b/project-info/project-page-paragraph.html
@@ -2,7 +2,7 @@
 <b><a href="/egit/">Eclipse Git Team Provider (EGit)</a></b>
 </p>
 <p>
-EGit is an Eclipse Team provider for <a href="http://git.or.cz">Git</a>. 
+EGit is an Eclipse Team provider for <a href="http://git-scm.com/">Git</a>.
 Git is a distributed SCM, which means every developer has a full copy of all 
 history of every revision of the code, making queries against the history 
 very fast and versatile. The EGit project is implementing Eclipse tooling 
