--- a/project-info/project-page-paragraph.html
+++ b/project-info/project-page-paragraph.html
@@ -6,7 +6,5 @@ EGit is an Eclipse Team provider for <a href="http://git-scm.com/">Git</a>.
 Git is a distributed SCM, which means every developer has a full copy of all 
 history of every revision of the code, making queries against the history 
 very fast and versatile. The EGit project is implementing Eclipse tooling 
-for the JGit Java implementation of Git. 
+for the <a href="/jgit/">JGit</a> Java implementation of Git. 
 </p>
-
-
