--- a/developers/_index.html
+++ b/developers/_index.html
@@ -8,7 +8,7 @@
 	<li><b><a
 		href="https://dev.eclipse.org/mailman/listinfo/egit-build"
 		title="https://dev.eclipse.org/mailman/listinfo/egit-build"
-		rel="nofollow">Developer Mailing List</a></b> - Subscribe to the build notification list.</li>
+		rel="nofollow">Build Notices Mailing List</a></b> - Subscribe to the build notification list.</li>
 	<li><b><a href="http://www.ohloh.net/projects/egit"
 		class="external text" title="http://www.ohloh.net/projects/egit"
 		rel="nofollow">EGit at ohloh.net</a></b></li>
