--- a/download/_index.html
+++ b/download/_index.html
@@ -1,8 +1,8 @@
 <h2>Installing</h2>
 <p>EGit can be installed in two main ways:</p>
 <ul>
-<li>Main Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a>. (Recommended)</li>
-<li>Helios Site: <a href="http://download.eclipse.org/releases/helios">http://download.eclipse.org/releases/helios</a>. (Recommended)</li>
+<li>Main Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
+<li>Helios Site: <a href="http://download.eclipse.org/releases/helios">http://download.eclipse.org/releases/helios</a></li>
 </ul>
 
 <h2>Bleeding Edge Builds</h2>
