--- a/_index.html
+++ b/_index.html
@@ -1,13 +1,13 @@
 <div id="bigbuttons">
 <h3>Primary Links</h3>
 <ul>
-	<li><a id="buttonDownload" href="download.php" title="Download">Eclipse
+	<li><a id="buttonDownload" href="/egit/download" title="Download">Eclipse
 	Distribution, Update Site, Dropins</a></li>
-	<li><a id="buttonDocumentation" href="midcolumn_example.php"
+	<li><a id="buttonDocumentation" href=/egit/documentation"
 		title="Documentation">Tutorials, Examples, Videos, Reference Documentation</a></li>
-	<li><a id="buttonSupport" href="midcolumn_example.php" title="Download">Bug
-	Tracker, Newsgroup, Professional Support</a></li>
-	<li><a id="buttonInvolved" href="midcolumn_example.php" title="Getting Involved">CVS,
+	<li><a id="buttonSupport" href="/egit/support" title="Support">Bug
+	Tracker, Newsgroup, Support</a></li>
+	<li><a id="buttonInvolved" href="/egit/developers" title="Getting Involved">VCS,
 	Workspace Setup, Wiki, Committers</a></li>
 </ul>
 </div>
@@ -17,49 +17,7 @@
 <div id="introText">
 <p class="left">EGit is an Eclipse Team provider for Git. Git is a distributed SCM, which means every developer has a full copy of all history of every revision of the code, making queries against the history very fast and versatile. The EGit project is implementing Eclipse tooling for the JGit Java implementation of Git.</p>
 
-<p class="right">The Framework integrates with technology from
-Eclipse Modeling such as EMF, GMF, M2T and parts of EMFT. Development
-with MyProject is optimized for short turn-arounds, so that adding new
-features to an existing DSL is a matter of minutes. Still sophisticated
-programming languages can be implemented.</p>
 </div>
- 
- 
-<div id="screencast">
-<object width="640" height="480"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=8260921&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=DBD7EF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=8260921&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=DBD7EF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="640" height="480"></embed></object>
-</div>
-
-<!-- 
-<h3>...and yet powerful</h3>
- -->
-<div id="feature_1">
-
-<h4>Some cool feature</h4>
-<p>MyProject has this really cool feature that you describe here in few words, just as a teaser.</p>
-</div>
-
-<div id="feature_2">
-<h4>Another Feature</h4>
-<p>When working with MyProject, great things happen, and one of them is described here.</p>
-</div>
-
-<div id="feature_3">
-<h4>Another Feature</h4>
-<p>When working with MyProject, great things happen, and one of them is described here.</p>
-</div>
-
-<div id="feature_4">
-<h4>User Experience</h4>
-<p>
-Experiment with style.css to create columns for text, just the way you want it. This section 
-is a bit wider and can contain more words, even small logos or graphics to describe a neat feature in more detail.</p>
-</div>
-
-<div id="feature_more">
-<h4>and much more...</h4>
-<p>Read the MyProject <a href="/project/documentation.php">documentation</a> and join the discussion at the <a href="http://www.eclipse.org/forums/eclipse.newsgroup.name">forum</a> to understand how powerful MyProject is.</p>
-</div>
-
 </div>
 
 <div id="rightcolumn">
