fighting div tags

--- a/developers/_index.html
+++ b/developers/_index.html
@@ -11,6 +11,5 @@
 		rel="nofollow">Build Notices Mailing List</a></b> - Subscribe to the build notification list.</li>
 	<li><b><a href="http://www.ohloh.net/projects/egit"
 		class="external text" title="http://www.ohloh.net/projects/egit"
-		rel="nofollow">EGit at ohloh.net</a></b></li>
-
+		rel="nofollow">EGit at ohloh.net</a></b> - Track the project!</li>
 </ul>
