--- a/_index.html
+++ b/_index.html
@@ -3,7 +3,7 @@
 <ul>
 	<li><a id="buttonDownload" href="/egit/download" title="Download">Eclipse
 	Distribution, Update Site, Dropins</a></li>
-	<li><a id="buttonDocumentation" href=/egit/documentation"
+	<li><a id="buttonDocumentation" href="/egit/documentation"
 		title="Documentation">Tutorials, Examples, Videos, Reference Documentation</a></li>
 	<li><a id="buttonSupport" href="/egit/support" title="Support">Bug
 	Tracker, Newsgroup, Support</a></li>
