--- a/_index.html
+++ b/_index.html
@@ -19,6 +19,12 @@
 
 <div id="rightcolumn">
 
+<h3>Incubation</h3>
+<div align="center"><a href="http://www.eclipse.org/projects/what-is-incubation.php"><img align="right"
+				src="http://www.eclipse.org/images/egg-incubation.png" border="0" /></a></div>
+<p>EGit is in the <a href="http://www.eclipse.org/projects/dev_process/validation-phase.php">Incubation Phase</a>.</p>
+</div>
+
 <div class='sideitem'>
 	<h6>subsection title</h6>
 	<div class='modal'> **1
