--- a/_index.html
+++ b/_index.html
@@ -27,11 +27,14 @@
 </div>
 <p>EGit is in the <a href="http://www.eclipse.org/projects/dev_process/validation-phase.php">Incubation Phase</a>.</p>
 
-<div class='sideitem'>
-	<h6>subsection title</h6>
-	<div class='modal'> **1
-		''<p> <ul> <ol> <span> etc''
-	</div>
-</div>
+<h3>Contributors</h3>
+<p>
+<ul>
+	<li>Dewire</li>
+	<li>EclipseSource</li>
+	<li>Google</li>
+	<li>SAP</li>
+</ul>
+</p>
 
 </div>
