--- a/_index.html
+++ b/_index.html
@@ -17,6 +17,10 @@
 <p>EGit is an Eclipse Team provider for Git. Git is a distributed SCM, which means every developer has a full copy of all history of every revision of the code, making queries against the history very fast and versatile. The EGit project is implementing Eclipse tooling for the JGit Java implementation of Git.</p>
 </div>
 
+<p>
+	<img src="egitwizard.png">
+</p>
+
 <div id="rightcolumn">
 
 <h3>Incubation</h3>
