--- a/_index.html
+++ b/_index.html
@@ -32,14 +32,14 @@
 </div>
 <p>EGit is in the <a href="http://www.eclipse.org/projects/dev_process/validation-phase.php">Incubation Phase</a>.</p>
 
-<h3>Contributors</h3>
-<p>
-<ul>
-	<li>Dewire</li>
-	<li>EclipseSource</li>
-	<li>Google</li>
-	<li>SAP</li>
-</ul>
-</p>
+<div class="sideitem">
+			<h6>Contributors</h6>
+			<ul>
+				<li>Dewire</li>
+				<li>EclipseSource</li>
+				<li>Google</li>
+				<li>SAP</li>
+			</ul>
+</div>
 
 </div>
