--- a/_index.html
+++ b/_index.html
@@ -26,7 +26,6 @@
 
 <div class="sideitem">
 	<h6>Incubation</h6>
-	<div align="center">
 	<a href="http://www.eclipse.org/projects/what-is-incubation.php">
 		<img align="right" src="http://www.eclipse.org/images/egg-incubation.png" border="0" />
 	</a>
@@ -38,9 +37,9 @@
 </div>
 
 <div class="sideitem">
-			<h6>Contributors</h6>
+			<h6>Committers</h6>
 			<ul>
-				<li>Dewire</li>
+				<li>Chris Aniszczyk (EclipseSource)</li>
 				<li>EclipseSource</li>
 				<li>Google</li>
 				<li>SAP</li>
