--- a/_index.html
+++ b/_index.html
@@ -36,9 +36,14 @@
 	<h3>Committers</h3>
 		<ul>
 			<li>Chris Aniszczyk (EclipseSource)</li>
-			<li>EclipseSource</li>
-			<li>Google</li>
-			<li>SAP</li>
+			<li>Christian Halstrick (SAP)</li>
+			<li>Mik Kersten (Tasktop)</li>
+			<li>Stefan Lay (SAP)</li>
+			<li>Mykola Nikishov (Independent)</li>
+			<li>Shawn Pearce (Google)</li>
+			<li>Robin Rosenberg (Dewire)</li>
+			<li>Matthias Sohn (SAP)</li>
+			<li>Gunnar Wagenknecht (Ageto)</li>
 		</ul>
 
 </div>
