Minor cleanups of text in home page.

--- a/_index.html
+++ b/_index.html
@@ -1,49 +1,55 @@
 <div id="bigbuttons">
 <h3>Primary Links</h3>
 <ul>
-	<li><a id="buttonDownload" href="/egit/download" title="Download">Eclipse
+	<li><a id="buttonDownload" href="/egit/download/" title="Download">Eclipse
 	Distribution, Update Site, Dropins</a></li>
-	<li><a id="buttonDocumentation" href="/egit/documentation"
+	<li><a id="buttonDocumentation" href="/egit/documentation/"
 		title="Documentation">Tutorials, Examples, Videos, Reference Documentation</a></li>
-	<li><a id="buttonSupport" href="/egit/support" title="Support">Bug
+	<li><a id="buttonSupport" href="/egit/support/" title="Support">Bug
 	Tracker, Newsgroup, Support</a></li>
-	<li><a id="buttonInvolved" href="/egit/developers" title="Getting Involved">VCS,
+	<li><a id="buttonInvolved" href="/egit/developers/" title="Getting Involved">VCS,
 	Workspace Setup, Wiki, Committers</a></li>
 </ul>
 </div>
 
 <div id="midcolumn">
 <h3>EGit</h3>
-<p>EGit is an Eclipse Team provider for Git. Git is a distributed SCM, which means every developer has a full copy of all history of every revision of the code, making queries against the history very fast and versatile. The EGit project is implementing Eclipse tooling for the JGit Java implementation of Git.</p>
 
 <p>
-	<img src="egitwizard.png">
+EGit is an Eclipse Team provider for the
+<a href="http://git-scm.com/">Git version control system</a>.  Git is a
+distributed SCM, which means every developer has a full copy of all history
+of every revision of the code, making queries against the history very fast
+and versatile.
 </p>
 
+<p>The EGit project is implementing Eclipse tooling on top of the
+<a href="http://www.eclipse.org/jgit/">JGit</a> Java implementation of Git.
+</p>
+
+<p>
+	<img src="egitwizard.png" alt="Import wizard screenshot"
+	  width="603" height="509">
+</p>
 </div>
 
 <div id="rightcolumn">
-
-
 	<h3>Incubation</h3>
 	<a href="http://www.eclipse.org/projects/what-is-incubation.php">
 		<img align="right" src="http://www.eclipse.org/images/egg-incubation.png" border="0" />
-	</a>
-	
+	</a>	
 	<p>EGit is in the <a href="http://www.eclipse.org/projects/dev_process/validation-phase.php">Incubation Phase</a>.</p>
-		
 
 	<h3>Committers</h3>
 		<ul>
 			<li>Chris Aniszczyk (EclipseSource)</li>
 			<li>Christian Halstrick (SAP)</li>
+      <li>Gunnar Wagenknecht (Ageto)</li>
+      <li>Matthias Sohn (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
+      <li>Mykola Nikishov (Independent)</li>
+      <li>Robin Rosenberg (Dewire)</li>
+      <li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
-			<li>Mykola Nikishov (Independent)</li>
-			<li>Shawn Pearce (Google)</li>
-			<li>Robin Rosenberg (Dewire)</li>
-			<li>Matthias Sohn (SAP)</li>
-			<li>Gunnar Wagenknecht (Ageto)</li>
 		</ul>
-
 </div>
