Fix titles in hyperlinks

--- a/developers/_index.html
+++ b/developers/_index.html
@@ -3,13 +3,13 @@
 		title="EGit Contributor Guide">EGit Contributor Guide</a></b> - How to contribute to the EGit project</li>
 	<li><b><a
 		href="https://dev.eclipse.org/mailman/listinfo/egit-dev"
-		title="https://dev.eclipse.org/mailman/listinfo/egit-dev"
+		title="egit-dev Mailing List"
 		rel="nofollow">Developer Mailing List</a></b> - Subscribe to the developer list.</li>
 	<li><b><a
 		href="https://dev.eclipse.org/mailman/listinfo/egit-build"
-		title="https://dev.eclipse.org/mailman/listinfo/egit-build"
+		title="egit-build Mailing List"
 		rel="nofollow">Build Notices Mailing List</a></b> - Subscribe to the build notification list.</li>
 	<li><b><a href="http://www.ohloh.net/projects/egit"
-		class="external text" title="http://www.ohloh.net/projects/egit"
+		class="external text"
 		rel="nofollow">EGit at ohloh.net</a></b> - Track the project!</li>
 </ul>
