fixing my employer reference on the egit/jgit websites

--- a/_index.html
+++ b/_index.html
@@ -42,7 +42,7 @@ and versatile.
 
 	<h3>Committers</h3>
 		<ul>
-			<li>Chris Aniszczyk (EclipseSource)</li>
+			<li>Chris Aniszczyk (Red Hat)</li>
 			<li>Christian Halstrick (SAP)</li>
       <li>Gunnar Wagenknecht (Ageto)</li>
       <li>Matthias Sohn (SAP)</li>
