Adding link to learning pages for presentations, examples and tutorials

--- a/documentation/_index.html
+++ b/documentation/_index.html
@@ -1,6 +1,8 @@
 <ul>
 	<li><b><a href="http://wiki.eclipse.org/EGit/User_Guide"
-		title="Documentation">User's Guide</a></b> - read our users guide to get started</li>
+		title="Getting started">User's Guide</a></b> - read our users guide to get started</li>
+	<li><b><a href="http://wiki.eclipse.org/EGit/Learning_Material"
+		title="Learning">Learning</a></b> - learn from presentations, examples and tutorials</li>
 	<li><b><a
 		href="http://www.eclipse.org/forums/index.php?t=thread&frm_id=48"
 		rel="nofollow">EGit Forums</a></b> - ask questions here if you need help!</li>
