add section for upcoming events

--- a/_index.html
+++ b/_index.html
@@ -44,12 +44,25 @@ and versatile.
 		<ul>
 			<li>Chris Aniszczyk (Red Hat)</li>
 			<li>Christian Halstrick (SAP)</li>
-      <li>Gunnar Wagenknecht (Ageto)</li>
-      <li>Matthias Sohn (SAP)</li>
+			<li>Gunnar Wagenknecht (Ageto)</li>
+			<li>Matthias Sohn (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
-      <li>Mykola Nikishov (Independent)</li>
-      <li>Robin Rosenberg (Dewire)</li>
-      <li>Shawn Pearce (Google)</li>
+			<li>Mykola Nikishov (Independent)</li>
+			<li>Robin Rosenberg (Dewire)</li>
+			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
 		</ul>
+		
+	<h3>Upcoming Events</h3>
+	<a href="http://live.eclipse.org/node/885">
+		Understanding and Using Git at Eclipse
+	</a>
+	<font size=-1>
+		<br>Webinar on 
+			<a href="http://www.timeanddate.com/worldclock/fixedtime.html?month=7&day=13&year=2010&hour=16&min=0&sec=0&p1=0">
+				July 13, 2010 4:00 pm GMT-8
+			</a>
+			<br>by Shawn Pearce (Google), Chris Aniszczyk (Red Hat)</br>
+		</br>
+	</font>
 </div>
