--- a/_index.html
+++ b/_index.html
@@ -53,16 +53,18 @@ and versatile.
 			<li>Stefan Lay (SAP)</li>
 		</ul>
 		
+	<br/>
 	<h3>Upcoming Events</h3>
-	<a href="http://live.eclipse.org/node/885">
-		Understanding and Using Git at Eclipse
-	</a>
-	<font size=-1>
-		<br>Webinar on 
-			<a href="http://www.timeanddate.com/worldclock/fixedtime.html?month=7&day=13&year=2010&hour=16&min=0&sec=0&p1=0">
-				July 13, 2010 4:00 pm GMT-8
-			</a>
-			<br>by Shawn Pearce (Google), Chris Aniszczyk (Red Hat)</br>
-		</br>
-	</font>
+	<dl compact>
+		<dt><a href="http://live.eclipse.org/node/885">
+			Understanding and Using Git at Eclipse
+		</a></dt>
+		<font size=-1>
+			<dt>Webinar on 
+				<a href="http://www.timeanddate.com/worldclock/fixedtime.html?month=7&day=13&year=2010&hour=16&min=0&sec=0&p1=0">
+					July 13, 2010 4:00 pm GMT-8
+				</a></dt>
+			<dt>Shawn Pearce (Google), Chris Aniszczyk (Red Hat)</br></dt>
+		</font>
+	</dl>
 </div>
