Added Mathias to list of committers

--- a/_index.html
+++ b/_index.html
@@ -46,6 +46,7 @@ and versatile.
 			<li>Christian Halstrick (SAP)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
 			<li>Matthias Sohn (SAP)</li>
+			<li>Mathias Kinzler (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
 			<li>Mykola Nikishov (Independent)</li>
 			<li>Robin Rosenberg (Dewire)</li>
