--- a/_index.html
+++ b/_index.html
@@ -49,6 +49,7 @@ and versatile.
 			<li>Matthias Sohn (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
 			<li>Mykola Nikishov (Independent)</li>
+			<li>Remy Suen (IBM)</li>
 			<li>Robin Rosenberg (Dewire)</li>
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
@@ -57,6 +58,13 @@ and versatile.
 	<br/>
 	<h3>Upcoming Events</h3>
 	<dl compact>
+		<dt>
+			<img src="http://wiki.eclipse.org/images/8/89/Eclipse-camp.gif" 
+				align="left" hspace="10" vspace="10" border="0" />
+			<a href="http://wiki.eclipse.org/EGit/DemoCamps_2010">
+			EGit on Eclipse Demo Camps 2010
+			</a>
+		</dt>
 		<dt><a href="http://live.eclipse.org/node/885">
 			Understanding and Using Git at Eclipse
 		</a></dt>
