--- a/_index.html
+++ b/_index.html
@@ -60,11 +60,10 @@ and versatile.
 	<dl compact>
 		<dt>
 			<img src="http://wiki.eclipse.org/images/8/89/Eclipse-camp.gif" 
-				align="left" hspace="10" vspace="10" border="0" />
-			<a href="http://wiki.eclipse.org/EGit/DemoCamps_2010">
-			EGit on Eclipse Demo Camps 2010
-			</a>
+				align="middle" border="0" />
+			<a href="http://wiki.eclipse.org/EGit/DemoCamps_2010">EGit on Demo Camps 2010</a>
 		</dt>
+		<hr>
 		<dt><a href="http://live.eclipse.org/node/885">
 			Understanding and Using Git at Eclipse
 		</a></dt>
