adjust ruler color

--- a/_index.html
+++ b/_index.html
@@ -63,7 +63,7 @@ and versatile.
 				align="middle" border="0" />
 			<a href="http://wiki.eclipse.org/EGit/DemoCamps_2010">EGit on Demo Camps 2010</a>
 		</dt>
-		<hr>
+		<hr height="1" color="f0f0f0">
 		<dt><a href="http://live.eclipse.org/node/885">
 			Understanding and Using Git at Eclipse
 		</a></dt>
