Added myself and Dariusz as commiters

--- a/_index.html
+++ b/_index.html
@@ -42,8 +42,10 @@ and versatile.
 
 	<h3>Committers</h3>
 		<ul>
+			<li>Benjamin Muskalla (EclipseSource)</li>
 			<li>Chris Aniszczyk (Red Hat)</li>
 			<li>Christian Halstrick (SAP)</li>
+			<li>Dariusz Luksza (Independent)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
 			<li>Mathias Kinzler (SAP)</li>
 			<li>Matthias Sohn (SAP)</li>
