Remove trailing period after hyperlink to enable easier copy&paste

--- a/download/_index.html
+++ b/download/_index.html
@@ -8,7 +8,7 @@
 <h2>Bleeding Edge Builds</h2>
 <p>If you like to live on the bleeding edge, you can install EGit from this repository:</p>
 <ul>
-<li><a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a>.</li>
+<li><a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
 </ul>
 
 <p>You can also build EGit from scratch following our <a href="http://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p> 
