fixing up web site

--- a/_index.html
+++ b/_index.html
@@ -34,6 +34,11 @@ and versatile.
 </div>
 
 <div id="rightcolumn">
+
+<p align="left"><a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
+						<img src="/egit/images/star.png" border="0"/>
+						Star EGit as favorite on Marketplace!</a></p>
+
 	<h3>Incubation</h3>
 	<a href="http://www.eclipse.org/projects/what-is-incubation.php">
 		<img align="right" src="http://www.eclipse.org/images/egg-incubation.png" border="0" />
