--- a/download/_index.html
+++ b/download/_index.html
@@ -1,3 +1,7 @@
+<p><a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
+						<img src="/egit/images/star.png" border="0"/>
+						Like EGit? Star it as favorite on Eclipse Marketplace!</a></p>
+
 <h2>Installing</h2>
 <p>EGit can be installed in two main ways:</p>
 <ul>
