--- a/_index.html
+++ b/_index.html
@@ -18,7 +18,7 @@
 
 <p align="left"><a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
 						<img src="/egit/images/star.png" border="0"/>
-						Star EGit as favorite on Marketplace!</a></p>
+						Star EGit as a <b>favorite</b> on Marketplace!</a></p>
 
 <p>
 EGit is an Eclipse Team provider for the
