updating egit screenshot

--- a/_index.html
+++ b/_index.html
@@ -33,8 +33,7 @@ and versatile.
 </p>
 
 <p>
-	<img src="egitwizard.png" alt="Import wizard screenshot"
-	  width="603" height="509">
+	<img src="welcome.png" alt="EGit screenshot">
 </p>
 </div>
 
