changed company for benjamin muskalla

--- a/_index.html
+++ b/_index.html
@@ -47,7 +47,7 @@ and versatile.
 
 	<h3>Committers</h3>
 		<ul>
-			<li>Benjamin Muskalla (EclipseSource)</li>
+			<li>Benjamin Muskalla (Tasktop)</li>
 			<li>Chris Aniszczyk (Red Hat)</li>
 			<li>Christian Halstrick (SAP)</li>
 			<li>Dariusz Luksza (Independent)</li>
