--- a/_index.html
+++ b/_index.html
@@ -52,6 +52,7 @@ and versatile.
 			<li>Christian Halstrick (SAP)</li>
 			<li>Dariusz Luksza (Independent)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
+			<li>Jens Baumgart (SAP)</li>
 			<li>Mathias Kinzler (SAP)</li>
 			<li>Matthias Sohn (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
