RESOLVED FIXED: Bug 333337 Provide current version info and changelog on webpage or wiki

--- a/download/_index.html
+++ b/download/_index.html
@@ -2,11 +2,12 @@
 						<img src="/egit/images/star.png" border="0"/>
 						Like EGit? Star it as a <b>favorite</b> on Eclipse Marketplace!</a></p>
 
-<h2>Installing</h2>
-<p>EGit can be installed in two main ways:</p>
+<h2>Installing the Latest Version: @VERSION@</h2>
+<p>EGit can be installed in three main ways:</p>
 <ul>
-<li>Main Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Helios Site: <a href="http://download.eclipse.org/releases/helios">http://download.eclipse.org/releases/helios</a></li>
+<li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
+<li>Indigo P2 Repository: <a href="http://download.eclipse.org/releases/indigo">http://download.eclipse.org/releases/indigo</a></li>
+<li>Via the Eclipse Marketplace: <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">http://marketplace.eclipse.org/content/egit-git-team-provider</a></li>
 </ul>
 
 <h2>Bleeding Edge Builds</h2>
