RESOLVED FIXED: Bug 333337 Provide current version info and changelog on webpage or wiki

--- a/download/_index.html
+++ b/download/_index.html
@@ -7,7 +7,7 @@
 <ul>
 <li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
 <li>Indigo P2 Repository: <a href="http://download.eclipse.org/releases/indigo">http://download.eclipse.org/releases/indigo</a></li>
-<li>Via the Eclipse Marketplace: <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">http://marketplace.eclipse.org/content/egit-git-team-provider</a></li>
+<li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <h2>Bleeding Edge Builds</h2>
