--- a/download/_index.html
+++ b/download/_index.html
@@ -2,6 +2,11 @@
 						<img src="/egit/images/star.png" border="0"/>
 						Like EGit? Star it as a <b>favorite</b> on Eclipse Marketplace!</a></p>
 
+<script type="text/javascript">
+          url_site = 'http://marketplace.eclipse.org/node/1336'
+        </script>
+        <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
+
 <h2>Installing the Latest Version: @VERSION@</h2>
 <p>EGit can be installed in three main ways:</p>
 <ul>
