--- a/_index.html
+++ b/_index.html
@@ -16,9 +16,10 @@
 
 <h3>EGit</h3>
 
-<p align="left"><a href="http://marketplace.eclipse.org/content/egit-git-team-provider">
-						<img src="/egit/images/star.png" border="0"/>
-						Star EGit as a <b>favorite</b> on Marketplace!</a></p>
+<script type="text/javascript">
+          url_site = 'http://marketplace.eclipse.org/node/1336'
+        </script>
+        <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
 
 <p>
 EGit is an Eclipse Team provider for the
