Add Kevin to the list of EGit Committers

--- a/_index.html
+++ b/_index.html
@@ -54,6 +54,7 @@ and versatile.
 			<li>Dariusz Luksza (Independent)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
 			<li>Jens Baumgart (SAP)</li>
+			<li>Kevin Sawicki (GitHub)</li>
 			<li>Mathias Kinzler (SAP)</li>
 			<li>Matthias Sohn (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
