Add "About This Project" link

--- a/_index.html
+++ b/_index.html
@@ -16,10 +16,17 @@
 
 <h3>EGit</h3>
 
-<script type="text/javascript">
-          url_site = 'http://marketplace.eclipse.org/node/1336'
-        </script>
-        <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
+<table border="0" width="100%">
+	<tr>
+		<td valign="top"><script type="text/javascript">
+				url_site = 'http://marketplace.eclipse.org/node/1336'
+			</script>
+			<script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"/>
+		</td>
+		<td valign="top"><a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
+		</td>
+	</tr>
+</table>
 
 <p>
 EGit is an Eclipse Team provider for the
