Move about link to right bottom corner

--- a/_index.html
+++ b/_index.html
@@ -16,17 +16,10 @@
 
 <h3>EGit</h3>
 
-<table border="0" width="100%">
-	<tr>
-		<td valign="top"><script type="text/javascript">
-				url_site = 'http://marketplace.eclipse.org/node/1336'
-			</script>
-			<script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"/>
-		</td>
-		<td valign="top"><a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
-		</td>
-	</tr>
-</table>
+<script type="text/javascript">
+          url_site = 'http://marketplace.eclipse.org/node/1336'
+        </script>
+        <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
 
 <p>
 EGit is an Eclipse Team provider for the
@@ -64,4 +57,6 @@ and versatile.
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
 		</ul>
+		
+	<p align="right"><a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a></p>
 </div>
