Move about link to primary links

--- a/_index.html
+++ b/_index.html
@@ -9,6 +9,7 @@
 	Tracker, Newsgroup, Support</a></li>
 	<li><a id="buttonInvolved" href="/egit/developers/" title="Getting Involved">VCS,
 	Workspace Setup, Wiki, Committers</a></li>
+	<li><a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a></li>
 </ul>
 </div>
 
@@ -56,7 +57,5 @@ and versatile.
 			<li>Robin Rosenberg (Dewire)</li>
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
-		</ul>
-		
-	<p align="right"><a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a></p>
+		</ul>		
 </div>
