--- a/_index.html
+++ b/_index.html
@@ -9,7 +9,6 @@
 	Tracker, Newsgroup, Support</a></li>
 	<li><a id="buttonInvolved" href="/egit/developers/" title="Getting Involved">VCS,
 	Workspace Setup, Wiki, Committers</a></li>
-	<li><a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a></li>
 </ul>
 </div>
 
@@ -21,6 +20,8 @@
           url_site = 'http://marketplace.eclipse.org/node/1336'
         </script>
         <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
+<br/>
+<a href="/projects/project_summary.php?projectid=technology.egit">About This Project</a>
 
 <p>
 EGit is an Eclipse Team provider for the
