Add Andrew Niefer to list of committers

--- a/_index.html
+++ b/_index.html
@@ -43,6 +43,7 @@ and versatile.
 <div id="rightcolumn">
 	<h3>Committers</h3>
 		<ul>
+			<li>Andrew Niefer (IBM)</li>
 			<li>Benjamin Muskalla (Tasktop)</li>
 			<li>Chris Aniszczyk (Red Hat)</li>
 			<li>Christian Halstrick (SAP)</li>
