Added link to download page explaining where to find older releases

--- a/download/_index.html
+++ b/download/_index.html
@@ -15,6 +15,12 @@
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
+<h2>Older Releases</h2>
+<p>To find older releases visit the following Wiki page</p>
+<ul>
+<li><a href="http://wiki.eclipse.org/EGit/FAQ#Where_can_I_find_older_releases_of_EGit.3F">Where to find older releases</a></li>
+</ul>
+
 <h2>Bleeding Edge Builds</h2>
 <p>If you like to live on the bleeding edge, you can install EGit from this repository:</p>
 <ul>
