--- a/download/_index.html
+++ b/download/_index.html
@@ -7,7 +7,7 @@
         </script>
         <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
 
-<h2>Installing the Latest Version: @VERSION@</h2>
+<h2>Installing the Latest Release: @VERSION@</h2>
 <p>EGit can be installed in three main ways:</p>
 <ul>
 <li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
