--- a/download/_index.html
+++ b/download/_index.html
@@ -15,6 +15,11 @@
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
+<p>EGit p2 repository download for system integrators (available since 1.2):</p>
+<ul>
+<li><a href="http://download.eclipse.org/egit/updates-1.2/org.eclipse.egit-updatesite-1.2.0.201112221803-r-site.zip">v1.2.0.201112221803-r</a></li>
+</ul>
+
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
 <ul>
