--- a/_index.html
+++ b/_index.html
@@ -45,7 +45,7 @@ and versatile.
 		<ul>
 			<li>Andrew Niefer (IBM)</li>
 			<li>Benjamin Muskalla (Tasktop)</li>
-			<li>Chris Aniszczyk (Red Hat)</li>
+			<li>Chris Aniszczyk (Twitter)</li>
 			<li>Christian Halstrick (SAP)</li>
 			<li>Dariusz Luksza (Independent)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
