--- a/download/_index.html
+++ b/download/_index.html
@@ -17,7 +17,7 @@
 
 <p>EGit p2 repository download for system integrators (available since 1.2):</p>
 <ul>
-<li><a href="http://download.eclipse.org/egit/updates-1.2/org.eclipse.egit-updatesite-1.3.0.201202151440-r-site.zip">v1.3.0.201202151440-r</a></li>
+<li><a href="http://download.eclipse.org/egit/updates-1.3/org.eclipse.egit-updatesite-@VERSION@-site.zip">@VERSION@</a></li>
 </ul>
 
 <h2>Older Releases</h2>
