Add new EGit committers to committer list

--- a/_index.html
+++ b/_index.html
@@ -47,6 +47,7 @@ and versatile.
 			<li>Benjamin Muskalla (Tasktop)</li>
 			<li>Chris Aniszczyk (Twitter)</li>
 			<li>Christian Halstrick (SAP)</li>
+			<li>Dani Megert (IBM)</li>
 			<li>Dariusz Luksza (Independent)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
 			<li>Jens Baumgart (SAP)</li>
@@ -57,7 +58,9 @@ and versatile.
 			<li>Mykola Nikishov (Independent)</li>
 			<li>Remy Suen (IBM)</li>
 			<li>Robin Rosenberg (Dewire)</li>
+			<li>Robin Stocker (Independent)</li>
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
+			<li>Tomasz Zarna (IBM)</li>
 		</ul>		
 </div>
