--- a/download/_index.html
+++ b/download/_index.html
@@ -11,7 +11,7 @@
 <p>EGit can be installed in three main ways:</p>
 <ul>
 <li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Indigo P2 Repository: <a href="http://download.eclipse.org/releases/indigo">http://download.eclipse.org/releases/indigo</a></li>
+<li>Juno P2 Repository: <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
