--- a/download/_index.html
+++ b/download/_index.html
@@ -8,11 +8,18 @@
         <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
 
 <h2>Installing the Latest Release: @VERSION@</h2>
-<p>EGit can be installed in three main ways:</p>
+<p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
 <li>Juno P2 Repository: <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
+</ul>
+
+<p>GitHub Mylyn Connector can be installed in the following ways:</p>
+<ul>
+<li>Main P2 Repository: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
+<li>Juno P2 Repository: <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
 <p>EGit p2 repository download for system integrators (available since 1.2):</p>
@@ -27,9 +34,10 @@
 </ul>
 
 <h2>Bleeding Edge Builds</h2>
-<p>If you like to live on the bleeding edge, you can install EGit from this repository:</p>
+<p>If you like to live on the bleeding edge, you can install EGit and the GitHub Mylyn connector the following repositories:</p>
 <ul>
-<li><a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
+<li>EGit - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
+<li>GitHub Mylyn Connector - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
 
 <p>You can also build EGit from scratch following our <a href="http://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p> 
