Add missing words to nightly description

--- a/download/_index.html
+++ b/download/_index.html
@@ -34,7 +34,7 @@
 </ul>
 
 <h2>Bleeding Edge Builds</h2>
-<p>If you like to live on the bleeding edge, you can install EGit and the GitHub Mylyn connector the following repositories:</p>
+<p>If you like to live on the bleeding edge, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
 <ul>
 <li>EGit - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
 <li>GitHub Mylyn Connector - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
