Changed company for Dariusz Luksza
Change-Id: Ide4f9892e1c740ad13b8f274bb24e4287adffd04

--- a/_index.html
+++ b/_index.html
@@ -48,7 +48,7 @@ and versatile.
 			<li>Chris Aniszczyk (Twitter)</li>
 			<li>Christian Halstrick (SAP)</li>
 			<li>Dani Megert (IBM)</li>
-			<li>Dariusz Luksza (Independent)</li>
+			<li>Dariusz Luksza (CollabNet)</li>
 			<li>Gunnar Wagenknecht (Ageto)</li>
 			<li>Jens Baumgart (SAP)</li>
 			<li>Kevin Sawicki (GitHub)</li>
