--- a/_index.html
+++ b/_index.html
@@ -7,8 +7,7 @@
 		title="Documentation">Tutorials, Examples, Videos, Reference Documentation</a></li>
 	<li><a id="buttonSupport" href="/egit/support/" title="Support">Bug
 	Tracker, Newsgroup, Support</a></li>
-	<li><a id="buttonInvolved" href="/egit/developers/" title="Getting Involved">VCS,
-	Workspace Setup, Wiki, Committers</a></li>
+	<li><a id="buttonInvolved" href="/egit/developers/" title="Getting Involved">Contributor Guide, Lists, Wiki, Committers</a></li>
 </ul>
 </div>
 
