Tomasz has joined Tasktop
Change-Id: I747249cac1a33700c378b35ca2dd214b91406e71

--- a/_index.html
+++ b/_index.html
@@ -60,6 +60,6 @@ and versatile.
 			<li>Robin Stocker (Independent)</li>
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
-			<li>Tomasz Zarna (IBM)</li>
+			<li>Tomasz Zarna (Tasktop)</li>
 		</ul>		
 </div>
