Make clear that Juno comes with EGit 2.1 currently
Change-Id: If8995a485009613d09692f22f32e6dd5cd7135da
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/download/_index.html
+++ b/download/_index.html
@@ -11,14 +11,14 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Juno P2 Repository: <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Juno P2 Repository (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
 <li>Main P2 Repository: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Juno P2 Repository: <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Juno P2 Repository (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
@@ -26,6 +26,8 @@
 <ul>
 <li><a href="http://download.eclipse.org/egit/updates-2.2/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
+
+<p><b>(*)</b> EGit 2.2 was released after Juno SR1, hence Juno currently contains EGit version 2.1. Next synchronized release is 2.3 which will be part of Juno SR2</b></p>
 
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
@@ -40,4 +42,4 @@
 <li>GitHub Mylyn Connector - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
 
-<p>You can also build EGit from scratch following our <a href="http://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p> 
+<p>You can also build EGit from scratch following our <a href="http://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p>
