Update download page for EGit 2.3.1.201302201838-r
Change-Id: I81a3dfd5a8cbf7eb8c9e1d97c8ebcb8369a6672d

--- a/download/_index.html
+++ b/download/_index.html
@@ -24,10 +24,10 @@
 
 <p>EGit p2 repository download for system integrators (available since 1.2):</p>
 <ul>
-<li><a href="http://download.eclipse.org/egit/updates-2.2/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
+<li><a href="http://download.eclipse.org/egit/updates-2.3/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
 
-<p><b>(*)</b> EGit 2.2 was released after Juno SR1, hence Juno currently contains EGit version 2.1. Next synchronized release is 2.3 which will be part of Juno SR2</b></p>
+<p><b>(*)</b> EGit 2.3.1 was released too late for Juno SR2, hence Juno SR2 contains EGit version 2.2.0</b></p>
 
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
