--- a/download/_index.html
+++ b/download/_index.html
@@ -8,17 +8,18 @@
         <script src="http://marketplace.eclipse.org/sites/all/modules/drigg_external/js/button.js" type="text/javascript"></script>
 
 <h2>Installing the Latest Release: @VERSION@</h2>
+<p>To install via one of the update site URLs listed below, copy and paste it into the &ldquo;Help &gt; Install new software&rdquo; dialog.</p>
 <p>EGit can be installed in the following ways:</p>
 <ul>
-<li>Main P2 Repository: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Juno P2 Repository (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
+<li>Juno Update Site (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
-<li>Main P2 Repository: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Juno P2 Repository (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Main Update Site: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
+<li>Juno Update Site (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
