Update download page for 3.0
Change-Id: I4263bb93642a48d75a9ea23d547fdea73f0afa66

--- a/download/_index.html
+++ b/download/_index.html
@@ -12,23 +12,21 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Juno Update Site (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Kepler Update Site (*): <a href="http://download.eclipse.org/releases/kepler">http://download.eclipse.org/releases/kepler</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Juno Update Site (*): <a href="http://download.eclipse.org/releases/juno">http://download.eclipse.org/releases/juno</a></li>
+<li>Kepler Update Site (*): <a href="http://download.eclipse.org/releases/kepler">http://download.eclipse.org/releases/kepler</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
 <p>EGit p2 repository download for system integrators (available since 1.2):</p>
 <ul>
-<li><a href="http://download.eclipse.org/egit/updates-2.3/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
+<li><a href="http://www.eclipse.org/downloads/download.php?file=/egit/updates-3.0/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
-
-<p><b>(*)</b> EGit 2.3.1 was released too late for Juno SR2, hence Juno SR2 contains EGit version 2.2.0</b></p>
 
 <h2>Older Releases</h2>
 <p>To find older releases visit the following Wiki page</p>
