--- a/download/_index.html
+++ b/download/_index.html
@@ -25,7 +25,7 @@
 
 <p>EGit p2 repository download for system integrators (available since 1.2):</p>
 <ul>
-<li><a href="http://www.eclipse.org/downloads/download.php?file=/egit/updates-3.0/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
+<li><a href="http://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
 
 <h2>Older Releases</h2>
