--- a/download/_index.html
+++ b/download/_index.html
@@ -12,9 +12,10 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Kepler Update Site: <a href="http://download.eclipse.org/releases/kepler">http://download.eclipse.org/releases/kepler</a></li>
+<li>Kepler Update Site [*]: <a href="http://download.eclipse.org/releases/kepler">http://download.eclipse.org/releases/kepler</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
+[*] The Kepler update site currently provides EGit 3.0.0.201306101825-r, hence in order to install the latest version you need to install from the main update site.
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
