Change "Bleeding Edge Builds" to "Nightly Builds"
Our nightlies are actually not that "bleeding" because of Gerrit.
Changing it to "nightly" and adjusting the description might encourage
more testing before the final release, which is always good to have.

Change-Id: I80bc5de2a6eca7bf0fabf057ee649025c9e90451
Signed-off-by: Robin Stocker <robin@nibor.org>

--- a/download/_index.html
+++ b/download/_index.html
@@ -35,11 +35,12 @@
 <li><a href="http://wiki.eclipse.org/EGit/FAQ#Where_can_I_find_older_releases_of_EGit.3F">Where to find older releases</a></li>
 </ul>
 
-<h2>Bleeding Edge Builds</h2>
-<p>If you like to live on the bleeding edge, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
+<h2>Nightly Builds</h2>
+<p>If you like to use the newest version possible or need a bugfix which is not yet released, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
 <ul>
 <li>EGit - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
 <li>GitHub Mylyn Connector - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
+<p>Because every change is reviewed before it is included in the nightly builds, they are actually quite stable.</p>
 
 <p>You can also build EGit from scratch following our <a href="http://wiki.eclipse.org/EGit/Contributor_Guide#Builds">contributor guide</a>.</p>
