Update download page for EGit 3.0.3
Change-Id: Ie3c54aa9d69d7f3c8ba8dcdf35f2a283eaae50be
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/download/_index.html
+++ b/download/_index.html
@@ -12,10 +12,9 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Kepler Update Site [*]: <a href="http://download.eclipse.org/releases/kepler">http://download.eclipse.org/releases/kepler</a></li>
+<li>Kepler Update Site: <a href="http://download.eclipse.org/releases/kepler">http://download.eclipse.org/releases/kepler</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
-[*] The Kepler update site currently provides EGit 3.0.0.201306101825-r, hence in order to install the latest version you need to install from the main update site.
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
@@ -36,10 +35,11 @@
 </ul>
 
 <h2>Nightly Builds</h2>
-<p>If you like to use the newest version possible or need a bugfix which is not yet released, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
+<p>If you like to use the latest development version or need a bugfix which is not yet released, you can install EGit and the GitHub Mylyn connector from the following update sites:</p>
 <ul>
-<li>EGit - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
-<li>GitHub Mylyn Connector - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
+<li>EGit development build (master branch) - <a href="http://download.eclipse.org/egit/updates-nightly">http://download.eclipse.org/egit/updates-nightly</a></li>
+<li>EGit maintenance build (latest stable branch) - <a href="http://download.eclipse.org/egit/updates-stable-nightly">http://download.eclipse.org/egit/updates-stable-nightly</a></li>
+<li>GitHub Mylyn Connector development build (master branch) - <a href="http://download.eclipse.org/egit/github/updates-nightly">http://download.eclipse.org/egit/github/updates-nightly</a></li>
 </ul>
 <p>Because every change is reviewed before it is included in the nightly builds, they are actually quite stable.</p>
 
