Update download page for 3.2.0
Change-Id: I9a47013f34879084c57066751aac7abdd3d4f276
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/download/_index.html
+++ b/download/_index.html
@@ -23,7 +23,7 @@
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
-<p>EGit p2 repository download for system integrators (available since 1.2):</p>
+<p>EGit p2 repository download for system integrators:</p>
 <ul>
 <li><a href="http://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
