--- a/download/_index.html
+++ b/download/_index.html
@@ -12,7 +12,7 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Luna Update Site (Luna contains EGit 3.4.0 at the moment): <a href="http://download.eclipse.org/releases/luna">http://download.eclipse.org/releases/luna</a></li>
+<li>Luna Update Site (Luna SR1 contains EGit 3.4.1): <a href="http://download.eclipse.org/releases/luna">http://download.eclipse.org/releases/luna</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
