Update download page for 4.0.1.201506240215-r
Change-Id: I97db1475ee6e0cdb0273cb635d4d1ed7cfed3227
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/_index.html
+++ b/_index.html
@@ -42,7 +42,7 @@ and versatile.
 <div id="rightcolumn">
 	<h3>Committers</h3>
 		<ul>
-			<li>Andrew Niefer (IBM)</li>
+			<li>Andrey Loskutov</li>
 			<li>Benjamin Muskalla (Tasktop)</li>
 			<li>Chris Aniszczyk (Twitter)</li>
 			<li>Christian Halstrick (SAP)</li>
@@ -51,13 +51,15 @@ and versatile.
 			<li>Gunnar Wagenknecht (Ageto)</li>
 			<li>Jens Baumgart (SAP)</li>
 			<li>Kevin Sawicki (GitHub)</li>
+			<li>Konrad Kügler</li>
+			<li>Laurent Goubet (Obeo)</li>
 			<li>Mathias Kinzler (SAP)</li>
 			<li>Matthias Sohn (SAP)</li>
 			<li>Mik Kersten (Tasktop)</li>
-			<li>Mykola Nikishov (Independent)</li>
+			<li>Mykola Nikishov</li>
 			<li>Remy Suen (IBM)</li>
 			<li>Robin Rosenberg (Dewire)</li>
-			<li>Robin Stocker (Independent)</li>
+			<li>Robin Stocker</li>
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
 			<li>Tomasz Zarna (Tasktop)</li>
