--- a/download/_index.html
+++ b/download/_index.html
@@ -12,14 +12,14 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Luna Update Site (Luna contains EGit 3.4.2): <a href="http://download.eclipse.org/releases/luna">http://download.eclipse.org/releases/luna</a></li>
+<li>Mars Update Site (Mars contains 4.0.0): <a href="http://download.eclipse.org/releases/mars">http://download.eclipse.org/releases/mars</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Luna Update Site: <a href="http://download.eclipse.org/releases/luna">http://download.eclipse.org/releases/luna</a></li>
+<li>Mars Update Site (Mars contains 4.0.0): <a href="http://download.eclipse.org/releases/mars">http://download.eclipse.org/releases/mars</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
