Update download page for 4.0.3.201509231615-r
Bug: 466665
Change-Id: I046014fa6e7edb03a026e8059795a930eb1f5773
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/download/_index.html
+++ b/download/_index.html
@@ -12,18 +12,18 @@
 <p>EGit can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/updates">http://download.eclipse.org/egit/updates</a> (Recommended)</li>
-<li>Mars Update Site (Mars.1 contains 4.0.2): <a href="http://download.eclipse.org/releases/mars">http://download.eclipse.org/releases/mars</a></li>
+<li>Mars Update Site (Mars.1 contains 4.0.3): <a href="http://download.eclipse.org/releases/mars">http://download.eclipse.org/releases/mars</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/egit-git-team-provider">Eclipse Marketplace</a></li>
 </ul>
 
 <p>GitHub Mylyn Connector can be installed in the following ways:</p>
 <ul>
 <li>Main Update Site: <a href="http://download.eclipse.org/egit/github/updates">http://download.eclipse.org/egit/github/updates</a> (Recommended)</li>
-<li>Mars Update Site (Mars.1 contains 4.0.2): <a href="http://download.eclipse.org/releases/mars">http://download.eclipse.org/releases/mars</a></li>
+<li>Mars Update Site (Mars.1 contains 4.0.3): <a href="http://download.eclipse.org/releases/mars">http://download.eclipse.org/releases/mars</a></li>
 <li>Via the <a href="http://marketplace.eclipse.org/content/github-mylyn-connector">Eclipse Marketplace</a></li>
 </ul>
 
-<p>EGit p2 repository download for system integrators:</p>
+<p>EGit p2 repository ZIP download for system integrators:</p>
 <ul>
 <li><a href="http://www.eclipse.org/downloads/download.php?file=/egit/updates/org.eclipse.egit.repository-@VERSION@.zip">@VERSION@</a></li>
 </ul>
