Add myself to list of committers
I guess it's about time ;-)

Change-Id: I705a3591009f4dd2979d14cd3225fecf5e019626
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/_index.html
+++ b/_index.html
@@ -62,6 +62,7 @@ and versatile.
 			<li>Robin Stocker</li>
 			<li>Shawn Pearce (Google)</li>
 			<li>Stefan Lay (SAP)</li>
+			<li>Thomas Wolf</li>
 			<li>Tomasz Zarna (Tasktop)</li>
 		</ul>		
 </div>
